<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lg_english">English</string>
    <string name="lg_french">French</string>
    <string name="lg_hindi">Hindi</string>
    <string name="lg_china">China</string>
    <string name="lg_spanish">Spanish</string>
    <string name="lg_portuguese">Portuguese</string>
    <string name="lg_indo">Indonesian</string>
    <string name="lg_japan">Japanese</string>
    <string name="lg_korean">Korean</string>
    <string name="lg_vietnam">Vietnamese</string>

    <string name="app_name">Musicaly</string>
    <string name="themes">Background</string>
    <string name="learn_piano">Learn Piano</string>
    <string name="menu">Menu</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="play_piano">Piano</string>
    <string name="guitar">Guitar</string>
    <string name="drumset">Drumset</string>
    <string name="theme">Theme</string>
    <string name="tite_splash">This action may contain advertising</string>
    <string name="next">Next</string>
    <string name="beginning_learn_piano">"Master the piano with our user-friendly app.</string>
    <string name="real_piano">Play piano tunes with our app!</string>
    <string name="and_more_musical_instrument">And more musical instrument.</string>
    <string name="start">Start</string>
    <string name="double_keys">Double keys</string>
    <string name="_2_players">2 players</string>
    <string name="style">Style</string>
    <string name="setting">Setting</string>
    <string name="recorder">Record</string>
    <string name="speed">Speed</string>
    <string name="play">Play</string>
    <string name="show_notes">Show Notes</string>
    <string name="manager_file_record">Piano File Record</string>
    <string name="volume">Volume</string>
    <string name="record_list">Record List</string>
    <string name="music_list">Music list</string>
    <string name="style_piano">Style Piano</string>
    <string name="micro">Micro</string>
    <string name="piano">Piano</string>
    <string name="storage">Storage</string>
    <string name="permission">Permission</string>
    <string name="go">Go</string>
    <string name="string_allow_translate">Musicaly requires permission to use the devices\'s storage and record audio</string>
    <string name="record_file_audio">Record file audio</string>
    <string name="noti_need_permission">You need enable permission</string>
    <string name="go_to_setting">go to setting</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="change_name">Change name</string>
    <string name="please_feedback">Please feedback</string>
    <string name="warning_record">This action cannot be performed while recording!</string>
    <string name="name">Name</string>
    <string name="swipe_to_change_background">Swipe to change background</string>
    <string name="accept">Accept</string>
</resources>