<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_1"
        android:tag="background" />

    <com.musical.instrument.simulator.app.base.HeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/statusbar"
        app:action_right_title="@string/go"
        app:cs_title="@string/permission"
        app:layout_constraintTop_toTopOf="parent"
        app:left_action_type="none"
        app:right_action_type="text" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/rl_native"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            android:paddingTop="60dp">

            <TextView
                android:id="@+id/tv_describe_per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/string_allow_translate"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/containerExactAlarm"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_switch_permission">

                <Switch
                    android:id="@+id/switchRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/thumb_background"
                    android:track="@drawable/track_backgroudn"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <com.musical.instrument.simulator.app.base.BaseTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/record_file_audio"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/containerPermission"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_switch_permission">

                <Switch
                    android:id="@+id/switchStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/thumb_background"
                    android:track="@drawable/track_backgroudn"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />


                <com.musical.instrument.simulator.app.base.BaseTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/storage"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rl_native"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/fr_native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/layout_shimer_native_language" />
        </FrameLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>